--- a/presentation/Store.Web/Views/Shared/_Layout.cshtml
+++ b/presentation/Store.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,25 @@
                 <input class="form-control mr-sm-2" type="search" name="query" placeholder="Author or title" />
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> 
             </form>
+            <span class="navbar-text ml-auto">
+                @{ 
+                    Cart cart;
+                    if (!Context.Session.TryGetCart(out cart))
+                    {
+                        cart = new Cart();
+                    }
+
+
+                    if (cart.Items.Count == 0)
+                    {
+                        @: Cart is empty
+                    }
+                    else
+                    { 
+                        @: Items @cart.Items.Count on total @cart.Amount 
+                    }
+                }
+            </span>
         </nav>
     </header>
     <div class="container">
